<resources>
    <string name="app_name">eShop</string>
    <string name="home">Home</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="buy">Buy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">cart</string>
    <string name="cart1">Cart</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="_0_00_z">0.00 zł</string>
    <string name="total">Total:</string>
    <string name="password_hint" />
    <string name="login_hint" />
</resources>